--- a/src/App.css
+++ b/src/App.css
@@ -24,3 +24,11 @@ body {
   margin-top: 5%;
   padding: 3% !important;
 }
+.message-sidenav {
+  margin-left: 300px;
+}
+@media only screen and (max-width: 992px) {
+  .message-sidenav {
+    margin-left: 0px;
+  }
+}
